add get reports by reporter id
