# backend/docs/openapi.yaml
@@ -293,6 +293,33 @@ paths:
         "500":
           description: Internal server error
 
+  /users/{reporter_id}/reports:
+    get:
+      tags:
+        - User
+      summary: Get reports by reporter ID
+      parameters:
+        - in: path
+          name: reporter_id
+          required: true
+          description: ID of user who created the reports
+          schema:
+            type: string
+      responses:
+        "200":
+          description: A list of reports reported by this user
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Report"
+        "500":
+          description: Internal server error
+
 components:
   schemas:
     Report:
