# backend/src/routes/v1/userRoute.ts
@@ -1,0 +1,9 @@
+import express from "express";
+
+import reportController from "../../controllers/v1/reportController";
+
+const router = express.Router();
+
+router.get("/:id/reports", reportController.getReportsByReporterId);
+
+export default { router };
